--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./bookStore.css" />
   </head>
   <body>
-    <h1>Awesome Books</h1>
-    <div id="bookList"></div>
+    <h2>All awesome books</h2>
+    <table id="bookList"></table>
+    <hr />
+    <h2>Add a new book</h2>
     <form id="addForm">
       <input type="text" placeholder="Title" id="title" required />
-      <br />
       <input type="text" placeholder="Author" id="author" required />
-      <br /> 
       <button type="submit">Add</button>
     </form>
 
